--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -18,22 +18,22 @@
 
     <a class="d-flex" routerLink="/media">
       <div class="media">
-        <img src="" alt="">
-        <h5>Media heading</h5>
+        <img src="" alt="" id="">
+        <h5 class="title1">Media heading</h5>
       </div>
     </a>
 
     <a class="d-flex" routerLink="/media">
       <div class="media1">
-        <img src="" alt="">
-        <h5>Media heading</h5>
+        <img src="" alt="" id="">
+        <h5 class="title2">Media heading</h5>
       </div>
     </a>
 
     <a class="d-flex" routerLink="/media">
       <div class="media2">
-        <img src="" alt="">
-        <h5>Media heading</h5>
+        <img src="" alt="" id="">
+        <h5 class="title3">Media heading</h5>
       </div>
     </a>
 
