--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,30 +1,13 @@
 <div class="root">
 
   <h2 class="title">About The MOCC</h2>
-
-    <div class="intro">
-        My name is Brandon L. Davis and I am the director of this website/catalogue. I am an alumni of
-        Hampden-Sydney College. The motivation behind this platform came from the education I continued to
-        research after gaining my Computer Science degree. At an early age, I educated myself about the history
-        of my ancestory and what comes with being an African American in America. As I expand my knowledge, I realized that my community along with 
-        various others that resembled mine do not have all of the proper resources to reach their full potential. In addition to this, 
-        their businesses were not doing as well as others. During the early 1900s, the potential of Tulsa, the Hayti community in Durham, 
-        Jackson Ward in Richmond, along with others was cut short due to hate and violence. The minority market hasn't had a similar standing since
-        those communities existed. My goal is to restore what these places were determined to accomplish which was the inclusion of
-        a creative educational and artistic environment and increasing the overall value of the small business market. 
-        This inclusive environment will be designed to be a digitalized interface where talented artists and business owners can promote their content.
-    </div>
     
     <div class="about">
-        This website is a unique project that will serve as a platform where foremost underprivileged businessowners can promote
-        their services and goods for our community. The Creator's Catalogue also displays a galore of minority art/media. It is 
-        no longer a secret that since the beginning of this country there has been animosity towards people who aren't White Americans 
-        and our advancement. MOCC will be a non-discrimatory environment where ANY minority group or person of interest can safely 
-        advertise display their brand/art. The main goal of this website is to promote minority creativity and help centralize the investments of 
-        minority communities. We must keep the returns of the investments inside of the community so the youth will benefit from an ample size of 
-        resources provided to them. This is just the beginning, THE MARATHON CONTINUES!
+        The Creator's Catalogue will store a galore of art/media. The main goal of this website is to promote creativity and help artists gain recognition as well as reward.
+        This enviroment will serve as a safe place for independent and non independent artists to display their talents. They will have the chance to upload their media and 
+        auction their art to the rest of the Catalogue users.
     </div>
 
-    <!-- <img class="picture" src="#insert diverse youth unification pic#" /> -->
+    <img class="picture" src="#insert diverse youth unification pic#" />
 
 </div>
