--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="root">
 
+  <!-- [ngStyle]="{background: 'url(/img(Path)/' + item.img(File) + ')', width: '200px', height: '150px'" -->
+
   <app-header></app-header>
   <router-outlet></router-outlet>
 
