--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,8 +19,8 @@
 
     <div class="topnav">
         <a [routerLink]="['/']" [routerLinkActiveOptions]="{exact: true}" [routerLinkActive]="['active']">Home</a>
-        <a routerLink="userpage" routerLinkActive="active">UP</a>
-        <a routerLink="search" routerLinkActive="active">Search</a>
+        <!-- <a routerLink="userpage" routerLinkActive="active">UP</a> -->
+        <!-- <a routerLink="search" routerLinkActive="active">Search</a> -->
         <a routerLink="about" routerLinkActive="active">About</a>
         <a routerLink="gallery" routerLinkActive="active">Gallery</a>
         <a routerLink="tours" routerLinkActive="active">Tour Dates</a>
